--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<style type="text/css">
+			body {
+				color: lime;
+				background-color: black;
+			}
+		</style>
 		<title>reymonr</title>
 	</head>
 	<body>
-		reymonr.github.io
+		<h3>reymonr.github.io</h3>
 	</body>
 </html>
