--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<style type="text/css">
+			body {
+				background-color: black;
+				color: white;
+			}
+		</style>
 		<title>reymonr</title>
 	</head>
 	<body>
