Remove the CSS style, and add email address

--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<style type="text/css">
-			body {
-				background-color: black;
-				color: white;
-			}
-		</style>
 		<title>reymonr</title>
 	</head>
 	<body>
-		<h3>reymonr.github.io</h3>
+		<h3>reymonr</h3>
+		<p>mail : rey.rotikan@gmail.com</p>
 	</body>
 </html>
