Edit the index.html and adding an image

--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
 				background-color: black;
 				color: white;
 			}
+			a {
+				color: lime;
+				text-decoration: none;
+			}
+			a:hover {
+				font-weight: bold;
+				text-decoration: none;
+				color: white;
+			}
+			a:visited {
+				color: lime;
+			}
 		</style>
 		<title>reymonr</title>
 	</head>
 	<body>
-		<h3>reymonr.github.io</h3>
+		<header>
+			<center><h5>reymonr.github.io</h5></center>
+		</header>
+
+		<center>
+			<img src="pict.jpg" alt="Open Source System" height="400" width="600" />
+			<br />
+			<a href="http://reymonr.github.io">page</a> &nbsp;&nbsp;&nbsp; 
+			<a href="mailto:rey.rotikan@gmail.com">mail</a>
+		</center>
+		
+		<footer>
+			<p align="center">&copy; 2013</p>
+		</footer>
 	</body>
 </html>
