Edit index.html to edit some CSS style. Adding two CSS files.

--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Metadata of the page -->
 		<meta charset="UTF-8">
-<<<<<<< HEAD
-		<style type="text/css">
-			body {
-				background-color: black;
-				color: white;
-			}
-			a {
-				color: lime;
-				text-decoration: none;
-			}
-			a:hover {
-				font-weight: bold;
-				text-decoration: none;
-				color: white;
-			}
-			a:visited {
-				color: lime;
-			}
-		</style>
-		<title>reymonr</title>
-	</head>
-	<body>
-		<header>
-			<center><h5>reymonr.github.io</h5></center>
-		</header>
+		<meta name="description" content="reymonr github page">
+		<meta name="keywords" content="HTML, CSS, JavaSCript, GitHub, Page, reymonr">
+		<meta name="author" content="reymonr">
 
-		<center>
-			<img src="pict.jpg" alt="Open Source System" height="400" width="600" />
-			<br />
-			<a href="http://reymonr.github.io">page</a> &nbsp;&nbsp;&nbsp; 
-			<a href="mailto:rey.rotikan@gmail.com">mail</a>
-		</center>
-		
-		<footer>
-			<p align="center">&copy; 2013</p>
-		</footer>
-=======
+		<!-- Loading all css files -->
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
 		<title>reymonr</title>
 	</head>
 	<body>
-		<h3>reymonr</h3>
-		<p>mail : rey.rotikan@gmail.com</p>
->>>>>>> 4df369bf978f1c92ae1b580c8d793c359f02fdff
+		<div id="isi">
+			<img src="pict.jpg" alt="Open Source System" height="400" width="600">
+			<br>
+			<a href="http://reymonr.github.io">gh.page</a> &nbsp;|&nbsp; 
+			<a href="mailto:rey.rotikan@gmail.com">mail.me</a>
+		</div>
 	</body>
 </html>
