updating index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 	</head>
 	<body>
 		<div id="isi">
-			<img src="pict.jpg" alt="Open Source System" height="400" width="600">
-			<br>
-			<a href="http://reymonr.github.io">gh.page</a> &nbsp;|&nbsp; 
-			<a href="mailto:rey.rotikan@gmail.com">mail.me</a>
+			<br />
+			<a href="http://reymonr.github.io/CNET201">CNET201</a>
 		</div>
 	</body>
 </html>
