updating index.html - removing link to CNET201 folder

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	</head>
 	<body>
 		<div id="isi">
-			<br />
-			<a href="http://reymonr.github.io/CNET201">CNET201</a>
+			reymonr
 		</div>
 	</body>
 </html>
