edit index.html to add announcement about Computer Security class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	</head>
 	<body>
 		<div id="isi">
-			./reymonr-github-repository
+			./reymonr-github-repository <br />
+			<p>
+				Computer Security (CSEC 442), <u>NO CLASS</u> on Tuesday, March 25<sup>th</sup> 2014.
+			</p>
 		</div>
 	</body>
 </html>
