edit again index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div id="isi">
 			./reymonr-github-repository <br />
-			<p>
+			<p color="black">
 				Computer Security (CSEC 442), <u>NO CLASS</u> on Tuesday, March 25<sup>th</sup> 2014.
 			</p>
 		</div>
