--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 	<body>
 		<div id="isi">
 			./reymonr-github-repository <br />
-			<p color="black">
-				Computer Security (CSEC 442), <u>NO CLASS</u> on Tuesday, March 25<sup>th</sup> 2014.
+			<p>
+				Link Download Materi File Structure : <br />
+				<a href="http://www.mediafire.com/download/mu7odwy6sk4lvm8/FILE_STRUCTURE.rar">File Structure : Ch7. Indexing, Ch9. B-Tree, Ch11. Hashing</a> <br />
+				Link Download Materi Computer Network I : <br />
+				<a href="http://www.mediafire.com/download/o6100onvq532ewl/COMPUTER_NETWORKING_I.rar
+">Subnetting-Routing, OSI Layers</a>
 			</p>
 		</div>
 	</body>
