--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
 	<body>
 		<div id="isi">
 			./reymonr-github-repository <br />
-			<p>
-				Link Download Materi File Structure : <br />
-				<a href="http://www.mediafire.com/download/mu7odwy6sk4lvm8/FILE_STRUCTURE.rar">File Structure : Ch7. Indexing, Ch9. B-Tree, Ch11. Hashing</a> <br />
-				Link Download Materi Computer Network I : <br />
-				<a href="http://www.mediafire.com/download/o6100onvq532ewl/COMPUTER_NETWORKING_I.rar
-">Subnetting-Routing, OSI Layers</a>
-			</p>
+			<a href="http://www.mediafire.com/download/mu7odwy6sk4lvm8/FILE_STRUCTURE.rar">File Structure : Ch7. Indexing, Ch9. B-Tree, Ch11. Hashing</a> <br />
+			Link Download Materi Computer Network I : <br />
+			<a href="http://www.mediafire.com/download/o6100onvq532ewl/COMPUTER_NETWORKING_I.rar">Computer Networking I : Subnetting-Routing, OSI Layers</a> <br />
 		</div>
 	</body>
 </html>
