--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<meta name="description" content="reymonr github page">
 		<meta name="keywords" content="HTML, CSS, JavaSCript, GitHub, Page, reymonr">
 		<meta name="author" content="reymonr">
+		
+		<link rel="shortcun icon" href="favicon.ico">
 
 		<!-- Loading all css files -->
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
-		<title>reymonr</title>
+		<title>reymonr.github.io</title>
 	</head>
 	<body>
 		<div id="isi">
-			./reymonr-github-repository <br /><br />
-			<a href="http://www.mediafire.com/download/mu7odwy6sk4lvm8/FILE_STRUCTURE.rar">File Structure : Ch7. Indexing, Ch9. B-Tree, Ch11. Hashing</a> <br />
-			<a href="http://www.mediafire.com/download/o6100onvq532ewl/COMPUTER_NETWORKING_I.rar">Computer Networking I : Subnetting-Routing, OSI Layers</a> <br />
+			<h1>reymonr.github.io</h1>
 		</div>
 	</body>
 </html>
