--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                         
                         <div class="row">
                             <div class="col-md-9">
-                                <h4>S.Kom in Sistem Informasi</h4>
+                                <h4>S.Kom in Information System</h4>
                                 <p class="sub"><a href="http://www.unklab.ac.id">Universitas Klabat, Indonesia</a></p>
-                                <p>Penelitian tentang pengembangan Sistem Informasi.</p>
+                                <p>Majoring in information system, and focusing in the development of a Web based information system.</p>
                             </div>
                             <div class="year col-md-3">
                                 <p>2006-2010</p>
