update email and website

--- a/index.html
+++ b/index.html
@@ -1,190 +1,284 @@
 <!DOCTYPE html>
 <html lang="">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- =========================== THEME INFO =========================== -->
-        <meta name="description" content="reymonr online curriculum vitae on github.">
-        <meta name="keywords" content="curriculum vitae, cv, reymonr, github, resume">
-        <meta name="author" content="reymonr">
+    <!-- =========================== THEME INFO =========================== -->
+    <meta
+      name="description"
+      content="reymonr online curriculum vitae on github."
+    />
+    <meta
+      name="keywords"
+      content="curriculum vitae, cv, reymonr, github, resume"
+    />
+    <meta name="author" content="reymonr" />
 
-        <!-- =========================== SITE TITLE =========================== -->
-        <title>reymonr | online.cv</title>
+    <!-- =========================== SITE TITLE =========================== -->
+    <title>reymonr | online.cv</title>
 
-        <!-- =========================== FAVICONS =========================== -->
-        <link rel="shortcut icon" href="img/favicon.ico">
+    <!-- =========================== FAVICONS =========================== -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
 
-        <!-- =========================== STYLESHEETS =========================== -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/responsive.css">
+    <!-- =========================== STYLESHEETS =========================== -->
+    <link
+      rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 
-        <!-- =========================== FONTS & ICONS =========================== -->
-        <link href='//fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- =========================== FONTS & ICONS =========================== -->
+    <link
+      href="//fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
 
-        <!--[if IE]>
-            <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <!-- CONTAINER -->
-        <div class="container">
-            <!-- ================= HEADER ================= -->
-            <div id="header" class="row">
-                <div class="col-sm-2"><img class="propic" src="img/reymonr.jpg" alt="reymonr"></div>
-
-                <div class="col-sm-10">
-                    <div class="cv-title">
-                        <div class="row"><div class="col-sm-7"><h1>Reymon R.</h1></div></div>
-                        <h2>Web Developer | Big Data Enthusiast | Lecturer</h2>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <ul class="list-unstyled">
-                                <li><a href="http://reymon.id"><span class="social fa fa-home"></span>reymon.id</a></li>
-                                <li><a href="skype:reymonr19?call"><span class="social fa fa-skype"></span>reymonr19</a></li>
-                                <li><a href="mailto:me@reymon.id"><span class="social fa fa-envelope-o"></span>me@reymon.id</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-4">
-                            <ul class="list-unstyled">
-                                <li><a href="https://www.facebook.com/reymonr"><span class="social fa fa-facebook"></span>Facebook</a></li>
-                                <li><a href="https://twitter.com/reyr19"><span class="social fa fa-twitter"></span>Twitter</a></li>
-                                <li><a href="https://www.linkedin.com/in/reymonr/"><span class="social fa fa-linkedin"></span>Linkedin</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ================= HEADER END ================= -->
-
-            <hr class="firsthr">
-
-            <!-- ================= BODY LEFT PART ================= -->
-            <div class="col-md-8 mainleft">
-                <div id="statement" class="row mobmid">
-                    <div class="col-sm-1"><span class="secicon fa fa-user"></span></div>
-                    <div class="col-sm-11">
-                        <h3>Personal statement </h3>
-                        <p>Hi, I am Reymon from Indonesia. I am a web developer, big data enthusiast, and a lecturer. This is my online CV.</p>
-                        <p class="signature">reymonr</p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div id="education" class="row mobmid">
-                    <div class="col-sm-1"><span class="secicon fa fa-graduation-cap"></span></div>
-
-                    <div class="col-sm-11">
-                        <h3>Education &amp; Certification</h3>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <h4>MS in Computer Science</h4>
-                                <p class="sub"><a href="http://www.yzu.edu.tw">Yuan Ze University, Taiwan R.O.C</a></p>
-                                <p></p>
-                            </div>
-                            <div class="year col-md-3"><p>2012-2014</p></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <h4>S.Kom in Information System</h4>
-                                <p class="sub"><a href="http://www.unklab.ac.id">Universitas Klabat, Indonesia</a></p>
-                                <p></p>
-                            </div>
-                            <div class="year col-md-3">
-                                <p>2006-2010</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <hr>
-
-                <div id="job" class="row mobmid">
-                    <div class="col-sm-1"><span class="secicon fa fa-briefcase"></span></div>
-
-                    <div class="col-sm-11">
-                        <h3>Job Experiences</h3>
-
-                        <div class="row">
-                            <div class="col-md-9">
-                                <h4>Lecturer</h4>
-                                <p class="sub"><a href="http://fik.unklab.ac.id">Fakultas Ilmu Komputer, Universitas Klabat.</a></p>
-                                <p></p>
-                            </div>
-                            <div class="year col-md-3"><p>2014 - Present</p></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <h4>Lecturer</h4>
-                                <p class="sub"><a href="http://fik.unklab.ac.id">Fakultas Ilmu Komputer, Universitas Klabat.</a></p>
-                                <p></p>
-                            </div>
-                            <div class="year col-md-3"><p>Jan - Dec 2011</p></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ================= BODY LEFT PART END ================= -->
-            
-            <!-- ================= SIDEBAR ================= -->
-            <div class="col-md-4 mainright">
-                <div class="row">
-                    <div class="col-sm-1 col-md-2 mobmid"><span class="secicon fa fa-magic"></span></div>
-
-                    <div class="col-sm-11 col-md-10">
-                        <h3 class="mobmid">Technical skills </h3>
-                        <p>PHP</p>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-                                <span class="sr-only">85% Complete</span>
-                            </div>
-                        </div>
-                        <p>HTML &amp; CSS</p>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                                <span class="sr-only">95% Complete</span>
-                            </div>
-                        </div>
-                        <p>JavaScript</p>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
-                                <span class="sr-only">65% Complete</span>
-                            </div>
-                        </div>
-                        <p>Python</p>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                                <span class="sr-only">70% Complete</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ================= SIDEBAR END ================= -->
+    <!--[if IE]>
+      <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- CONTAINER -->
+    <div class="container">
+      <!-- ================= HEADER ================= -->
+      <div id="header" class="row">
+        <div class="col-sm-2">
+          <img class="propic" src="img/reymonr.jpg" alt="reymonr" />
         </div>
-        <!-- CONTAINER END -->
 
-        <!-- FOOTER -->
-        <footer class="text-center">
+        <div class="col-sm-10">
+          <div class="cv-title">
+            <div class="row">
+              <div class="col-sm-7"><h1>Reymon R.</h1></div>
+            </div>
+            <h2>Web Developer | Big Data Enthusiast | Lecturer</h2>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-4">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="skype:reymonr19?call"
+                    ><span class="social fa fa-skype"></span>reymonr19</a
+                  >
+                </li>
+                <li>
+                  <a href="mailto:rey.rotikan@gmail.com"><span class="social fa fa-envelope-o"></span
+                    >rey.rotikan[at]gmail.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="col-sm-4">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="https://www.facebook.com/reymonr"
+                    ><span class="social fa fa-facebook"></span>Facebook</a
+                  >
+                </li>
+                <li>
+                  <a href="https://twitter.com/reyr19"
+                    ><span class="social fa fa-twitter"></span>Twitter</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/reymonr/"
+                    ><span class="social fa fa-linkedin"></span>Linkedin</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ================= HEADER END ================= -->
+
+      <hr class="firsthr" />
+
+      <!-- ================= BODY LEFT PART ================= -->
+      <div class="col-md-8 mainleft">
+        <div id="statement" class="row mobmid">
+          <div class="col-sm-1"><span class="secicon fa fa-user"></span></div>
+          <div class="col-sm-11">
+            <h3>Personal statement</h3>
             <p>
-                reymonr | online.cv &copy; 2017 <br>
-                Template by <a href="https://evenfly.com">EvenFly </a> - 
-                Designed by <a target="_blank" href="http://www.facebook.com/towkirahmedbappy">Towkir Ahmed Bappy</a>.
+              Hi, I am Reymon from Indonesia. I am a web developer, data science 
+              enthusiast, and a lecturer. This is my online CV.
             </p>
-        </footer>
-        <!-- FOOTER END -->
+            <p class="signature">reymonr</p>
+          </div>
+        </div>
 
-        <!-- JAVASCRIPT -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="js/jquery.nicescroll.min.js"></script>
-        <script src="js/evenfly.js"></script>
-        <!-- JAVASCRIPT END -->
-    </body>
+        <hr />
+
+        <div id="education" class="row mobmid">
+          <div class="col-sm-1">
+            <span class="secicon fa fa-graduation-cap"></span>
+          </div>
+
+          <div class="col-sm-11">
+            <h3>Education &amp; Certification</h3>
+            <div class="row">
+              <div class="col-md-9">
+                <h4>MS in Computer Science</h4>
+                <p class="sub">
+                  <a href="http://www.yzu.edu.tw"
+                    >Yuan Ze University, Taiwan R.O.C</a
+                  >
+                </p>
+                <p></p>
+              </div>
+              <div class="year col-md-3"><p>2012-2014</p></div>
+            </div>
+            <div class="row">
+              <div class="col-md-9">
+                <h4>S.Kom in Information System</h4>
+                <p class="sub">
+                  <a href="http://www.unklab.ac.id"
+                    >Universitas Klabat, Indonesia</a
+                  >
+                </p>
+                <p></p>
+              </div>
+              <div class="year col-md-3">
+                <p>2006-2010</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr />
+
+        <div id="job" class="row mobmid">
+          <div class="col-sm-1">
+            <span class="secicon fa fa-briefcase"></span>
+          </div>
+
+          <div class="col-sm-11">
+            <h3>Job Experiences</h3>
+
+            <div class="row">
+              <div class="col-md-9">
+                <h4>Lecturer</h4>
+                <p class="sub">
+                  <a href="http://fik.unklab.ac.id"
+                    >Fakultas Ilmu Komputer, Universitas Klabat.</a
+                  >
+                </p>
+                <p></p>
+              </div>
+              <div class="year col-md-3"><p>2014 - Present</p></div>
+            </div>
+            <div class="row">
+              <div class="col-md-9">
+                <h4>Lecturer</h4>
+                <p class="sub">
+                  <a href="http://fik.unklab.ac.id"
+                    >Fakultas Ilmu Komputer, Universitas Klabat.</a
+                  >
+                </p>
+                <p></p>
+              </div>
+              <div class="year col-md-3"><p>Jan - Dec 2011</p></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ================= BODY LEFT PART END ================= -->
+
+      <!-- ================= SIDEBAR ================= -->
+      <div class="col-md-4 mainright">
+        <div class="row">
+          <div class="col-sm-1 col-md-2 mobmid">
+            <span class="secicon fa fa-magic"></span>
+          </div>
+
+          <div class="col-sm-11 col-md-10">
+            <h3 class="mobmid">Technical skills</h3>
+            <p>PHP</p>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-success"
+                role="progressbar"
+                aria-valuenow="85"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 85%"
+              >
+                <span class="sr-only">85% Complete</span>
+              </div>
+            </div>
+            <p>HTML &amp; CSS</p>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-warning"
+                role="progressbar"
+                aria-valuenow="95"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 95%"
+              >
+                <span class="sr-only">95% Complete</span>
+              </div>
+            </div>
+            <p>JavaScript</p>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-danger"
+                role="progressbar"
+                aria-valuenow="80"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 80%"
+              >
+                <span class="sr-only">80% Complete</span>
+              </div>
+            </div>
+            <p>Python</p>
+            <div class="progress">
+              <div
+                class="progress-bar progress-bar-info"
+                role="progressbar"
+                aria-valuenow="70"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 70%"
+              >
+                <span class="sr-only">70% Complete</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ================= SIDEBAR END ================= -->
+    </div>
+    <!-- CONTAINER END -->
+
+    <!-- FOOTER -->
+    <footer class="text-center">
+      <p>
+        reymonr | online.cv &copy; 2017 <br />
+        Template by <a href="https://evenfly.com">EvenFly </a> - Designed by
+        <a target="_blank" href="http://www.facebook.com/towkirahmedbappy"
+          >Towkir Ahmed Bappy</a
+        >.
+      </p>
+    </footer>
+    <!-- FOOTER END -->
+
+    <!-- JAVASCRIPT -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="js/jquery.nicescroll.min.js"></script>
+    <script src="js/evenfly.js"></script>
+    <!-- JAVASCRIPT END -->
+  </body>
 </html>
