edit personal statement

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h3>Personal statement</h3>
             <p>
               Hi, I am Reymon from Indonesia. I am a web developer, data science 
-              enthusiast, and a lecturer. This is my online CV.
+              enthusiast, and a lecturer.
             </p>
             <p class="signature">reymonr</p>
           </div>
