--- a/tutorial.html
+++ b/tutorial.html
@@ -513,6 +513,8 @@ pre.line-numbers > code {
 
 <h1 id="toc_0">STATIC SITE &amp; BLOG USING GATSBYJS</h1>
 
+<p>Contact me: <a href="reymonr@unklab.ac.id">reymonr@unklab.ac.id</a></p>
+
 <h3 id="toc_1">1. Setup Development Environment</h3>
 
 <h5 id="toc_2">1.1 Install Node.js and NPM</h5>
