add link to original tutorial at traversymedia youtube

--- a/tutorial.html
+++ b/tutorial.html
@@ -513,7 +513,7 @@ pre.line-numbers > code {
 
 <h1 id="toc_0">STATIC SITE &amp; BLOG USING GATSBYJS</h1>
 
-<p>Contact me: <a href="reymonr@unklab.ac.id">reymonr@unklab.ac.id</a></p>
+<p>This tutorial is based on Traversy Media GatsbyJS crash course. You can find the video by click the following link : <a href="https://www.youtube.com/watch?v=6YhqQ2ZW1sc&t=310s">https://www.youtube.com/watch?v=6YhqQ2ZW1sc&t=310s</a></p>
 
 <h3 id="toc_1">1. Setup Development Environment</h3>
 
